--- a/One Pager/style.css
+++ b/One Pager/style.css
@@ -15,15 +15,15 @@ a {
     text-decoration: none;
 }
 
-
-li {
+.navbar-list{
     list-style-type: none;
+    cursor: pointer !important;
+    color:red;
 }
 
-
-h1,h2,h3, a { 
-    font-family: 'Roboto', sans-serif; 
-    font-weight: 500; color: #494949; 
+h1,h2,h3, a {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500; color: #494949;
     text-transform: uppercase;
 }
 
@@ -41,23 +41,26 @@ h3 {
 
 
 h4, p {
-    font-family: 'Roboto Slab', serif; 
+    font-family: 'Roboto Slab', serif;
     color: #494949;
 }
 
+.color-table{
+
+}
 
 hr {
-    width: 30px; 
-    height: 3px; 
-    background: #494949; 
-    border: 0px; 
+    width: 30px;
+    height: 3px;
+    background: #494949;
+    border: 0px;
     margin: 0 auto 40px auto;
 }
 
 #logo,li,img, .button {
-    transition: all 300ms; 
-    -webkit-transition: all 300ms; 
-    -moz-transition: all 300ms; 
+    transition: all 300ms;
+    -webkit-transition: all 300ms;
+    -moz-transition: all 300ms;
     -o-transition: all 300ms;
 }
 
@@ -247,6 +250,18 @@ button.botton:hover {
     color: #f0f0f0;
 }
 
+.table-row-height{
+    height: 6em;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 5px;
+  text-align: left;
+}
 /* FOOTER ****************************************************/
 
 footer {
