--- a/One Pager/style.css
+++ b/One Pager/style.css
@@ -2,6 +2,10 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
+}
+
+/* class="content-center" einfügen, wo der Content im Center sein soll */
+.content-center{
     text-align: center;
 }
 
@@ -27,9 +31,13 @@ h1,h2,h3, a {
     text-transform: uppercase;
 }
 
-
 h2 {
     color: #5d7177;
+}
+
+/* Klasse für list style none fpr deine "Aufgaben" */
+.projects-buttons{
+    list-style-type: none;
 }
 
 
@@ -40,7 +48,7 @@ h3 {
 }
 
 
-h4, p {
+h4, p a {
     font-family: 'Roboto Slab', serif;
     color: #494949;
 }
@@ -78,7 +86,7 @@ header {
 }
 
 #logo {
-    width: 140px;
+    width: 180px;
     float: left;
     margin: 10px 0 0 50px;
 }
@@ -100,7 +108,7 @@ header nav {
 
 header nav ul li {
     float: left;
-    margin-right: 25px;
+    margin-left: 25px;
 }
 
 header nav ul li a {
@@ -164,8 +172,12 @@ width: 240px;
 /* WORK ****************************************************/
 
 #work {
-    background-color: grey;
+    background-color:#DA6B51;
 
+}
+
+#work h3 {
+    color: white;
 }
 
 #projects {
@@ -267,11 +279,31 @@ th, td {
 footer {
     width: 100%;
     height: 70px;
-    background-color: black;
+    background-color: white;
 }
 
 footer p,a {
     front-size: size 12px;
-    color: white;
+    color:  black;
     padding-top: 30px;
+}
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
